Requires
~~~~~~~~
-
New features
~~~~~~~~~~~~
-
Bug fixes
~~~~~~~~~
- Added a permission check on the recursivePublish method.
- fix: traceback on reindexFolderContentPositions when not authorized.
- Improved the accessibility usefulness and explanations.
New internal features
~~~~~~~~~~~~~~~~~~~~~
- 