@@ -3,4 +3,8 @@
  <object name="members" portal_type="Members Workspace"/>
  <object name="sections" portal_type="Section"/>
  <object name="workspaces" portal_type="Workspace"/>
+ <object name="FckHTTPCache" meta_type="Accelerated HTTP Cache Manager"/>
+ <!--
+ <object name="portlet_lookup_ramcache" meta_type="RAM Cache Manager"/>
+ -->
 </roots>
