@@ -1,0 +1,7 @@
+<?xml version="1.0"?>
+<object name="FckHTTPCache" meta_type="Accelerated HTTP Cache Manager">
+ <property name="title">FCK HTTP Cache</property>
+ <property name="interval">1728000</property>
+ <property name="anonymous_only">0</property>
+ <property name="notify_urls"/>
+</object>
