@@ -3,7 +3,9 @@ Requires
 -
 New features
 ~~~~~~~~~~~~
--
+- Added the possibility to create any objects at the root of a CPS site
+  (for example Zope objects such as cache managers) by specifying them in
+  profiles/default/roots.xml. Previously it was limited to only CPS objects.
 Bug fixes
 ~~~~~~~~~
 - Added a permission check on the recursivePublish method.
